y.output
Terminals unused in grammar

   keyword
   punctuator
   STRUCT
   TYPEDEF
   UNION


State 346 conflicts: 1 reduce/reduce


Grammar

    0 $accept: translation_unit $end

    1 translation_unit: external_declaration
    2                 | translation_unit external_declaration

    3 M: %empty

    4 N: %empty

    5 primary_expression: identifier
    6                   | int_constant
    7                   | float_constant
    8                   | char_constant
    9                   | string_literal
   10                   | '(' expression ')'

   11 postfix_expression: primary_expression
   12                   | postfix_expression '[' expression ']'
   13                   | postfix_expression '(' argument_expression_list_opt ')'
   14                   | postfix_expression '.' identifier
   15                   | postfix_expression PTR_OP identifier
   16                   | postfix_expression INC_OP
   17                   | postfix_expression DEC_OP
   18                   | '(' type_name ')' '{' initializer_list '}'
   19                   | '(' type_name ')' '{' initializer_list ',' '}'

   20 argument_expression_list_opt: %empty
   21                             | argument_expression_list

   22 argument_expression_list: assignment_expression
   23                         | argument_expression_list ',' assignment_expression

   24 unary_expression: postfix_expression
   25                 | INC_OP unary_expression
   26                 | DEC_OP unary_expression
   27                 | unary_operator cast_expression
   28                 | SIZEOF unary_expression
   29                 | SIZEOF '(' type_name ')'

   30 unary_operator: '&'
   31               | '*'
   32               | '+'
   33               | '-'
   34               | '~'
   35               | '!'

   36 cast_expression: unary_expression
   37                | '(' type_name ')' cast_expression

   38 multiplicative_expression: cast_expression
   39                          | multiplicative_expression '*' cast_expression
   40                          | multiplicative_expression '/' cast_expression
   41                          | multiplicative_expression '%' cast_expression

   42 additive_expression: multiplicative_expression
   43                    | additive_expression '+' multiplicative_expression
   44                    | additive_expression '-' multiplicative_expression

   45 shift_expression: additive_expression
   46                 | shift_expression LEFT_OP additive_expression
   47                 | shift_expression RIGHT_OP additive_expression

   48 relational_expression: shift_expression
   49                      | relational_expression '<' shift_expression
   50                      | relational_expression '>' shift_expression
   51                      | relational_expression LE_OP shift_expression
   52                      | relational_expression GE_OP shift_expression

   53 equality_expression: relational_expression
   54                    | equality_expression EQ_OP relational_expression
   55                    | equality_expression NE_OP relational_expression

   56 AND_expression: equality_expression
   57               | AND_expression '&' equality_expression

   58 exclusive_OR_expression: AND_expression
   59                        | exclusive_OR_expression '^' AND_expression

   60 inclusive_OR_expression: exclusive_OR_expression
   61                        | inclusive_OR_expression '|' exclusive_OR_expression

   62 logical_AND_expression: inclusive_OR_expression
   63                       | logical_AND_expression AND_OP M inclusive_OR_expression

   64 logical_OR_expression: logical_AND_expression
   65                      | logical_OR_expression OR_OP M logical_AND_expression

   66 conditional_expression: logical_OR_expression
   67                       | logical_OR_expression N '?' M expression N ':' M conditional_expression

   68 assignment_expression_opt: %empty
   69                          | assignment_expression

   70 assignment_expression: conditional_expression
   71                      | unary_expression assignment_operator assignment_expression

   72 assignment_operator: '='
   73                    | MUL_ASSIGN
   74                    | DIV_ASSIGN
   75                    | MOD_ASSIGN
   76                    | ADD_ASSIGN
   77                    | SUB_ASSIGN
   78                    | LEFT_ASSIGN
   79                    | RIGHT_ASSIGN
   80                    | AND_ASSIGN
   81                    | XOR_ASSIGN
   82                    | OR_ASSIGN

   83 expression: assignment_expression
   84           | expression ',' assignment_expression

   85 constant_expression: conditional_expression

   86 declaration: declaration_specifiers init_declarator_list_opt ';'

   87 declaration_specifiers_opt: %empty
   88                           | declaration_specifiers

   89 declaration_specifiers: storage_class_specifier declaration_specifiers_opt
   90                       | type_specifier declaration_specifiers_opt
   91                       | type_qualifier declaration_specifiers_opt
   92                       | function_specifier declaration_specifiers_opt

   93 init_declarator_list_opt: %empty
   94                         | init_declarator_list

   95 init_declarator_list: init_declarator
   96                     | init_declarator_list ',' init_declarator

   97 init_declarator: declarator
   98                | declarator '=' initializer

   99 storage_class_specifier: EXTERN
  100                        | STATIC
  101                        | AUTO
  102                        | REGISTER

  103 type_specifier: VOID
  104               | CHAR
  105               | SHORT
  106               | INT
  107               | LONG
  108               | FLOAT
  109               | DOUBLE
  110               | SIGNED
  111               | UNSIGNED
  112               | _BOOL
  113               | _COMPLEX
  114               | _IMAGINARY
  115               | enum_specifier
  116               | MATRIX

  117 specifier_qualifier_list_opt: %empty
  118                             | specifier_qualifier_list

  119 specifier_qualifier_list: type_specifier specifier_qualifier_list_opt
  120                         | type_qualifier specifier_qualifier_list_opt

  121 enum_specifier: ENUM identifier_opt '{' enumerator_list '}'
  122               | ENUM identifier_opt '{' enumerator_list ',' '}'
  123               | ENUM identifier

  124 enumerator_list: enumerator
  125                | enumerator_list ',' enumerator

  126 enumerator: enumeration_constant
  127           | enumeration_constant '=' constant_expression

  128 enumeration_constant: identifier

  129 type_qualifier: CONST
  130               | RESTRICT
  131               | VOLATILE

  132 function_specifier: INLINE

  133 declarator: direct_declarator
  134           | pointer direct_declarator

  135 direct_declarator: identifier
  136                  | '(' declarator ')'
  137                  | direct_declarator '[' type_qualifier_list_opt assignment_expression_opt ']'
  138                  | direct_declarator '[' STATIC type_qualifier_list_opt assignment_expression ']'
  139                  | direct_declarator '[' type_qualifier_list STATIC assignment_expression ']'
  140                  | direct_declarator '[' type_qualifier_list_opt '*' ']'
  141                  | direct_declarator '(' parameter_type_list_opt ')'
  142                  | direct_declarator '(' identifier_list ')'

  143 parameter_type_list_opt: %empty
  144                        | parameter_type_list

  145 pointer: '*' type_qualifier_list_opt
  146        | '*' type_qualifier_list_opt pointer

  147 type_qualifier_list_opt: %empty
  148                        | type_qualifier_list

  149 type_qualifier_list: type_qualifier
  150                    | type_qualifier_list type_qualifier

  151 parameter_type_list: parameter_list
  152                    | parameter_list ',' ELLIPSIS

  153 parameter_list: parameter_declaration
  154               | parameter_list ',' parameter_declaration

  155 parameter_declaration: declaration_specifiers declarator
  156                      | declaration_specifiers

  157 identifier_opt: %empty
  158               | identifier

  159 identifier_list: identifier
  160                | identifier_list ',' identifier

  161 type_name: specifier_qualifier_list

  162 initializer: assignment_expression
  163            | '{' initializer_row_list '}'

  164 initializer_row_list: initializer_list
  165                     | initializer_row_list ';' initializer_list

  166 initializer_list: designation_opt initializer
  167                 | initializer_list ',' designation_opt initializer

  168 designation_opt: %empty
  169                | designation

  170 designation: designator_list '='

  171 designator_list: designator
  172                | designator_list designator

  173 designator: '[' constant_expression ']'
  174           | '.' identifier

  175 statement: labeled_statement
  176          | compound_statement
  177          | expression_statement
  178          | selection_statement
  179          | iteration_statement
  180          | jump_statement

  181 labeled_statement: identifier ':' statement
  182                  | CASE constant_expression ':' statement
  183                  | DEFAULT ':' statement

  184 compound_statement: '{' block_item_list_opt '}'

  185 block_item_list_opt: %empty
  186                    | block_item_list

  187 block_item_list: block_item
  188                | block_item_list M block_item

  189 block_item: declaration
  190           | statement

  191 expression_statement: expression_opt ';'

  192 selection_statement: IF '(' expression N ')' M statement
  193                    | IF '(' expression N ')' M statement N ELSE M statement
  194                    | SWITCH '(' expression ')' statement

  195 iteration_statement: WHILE '(' M expression N ')' M statement
  196                    | DO M statement WHILE '(' M expression ')' ';'
  197                    | FOR '(' expression_opt ';' M expression_opt N ';' M expression_opt N ')' M statement
  198                    | FOR '(' declaration expression_opt ';' expression_opt ')' statement

  199 jump_statement: GOTO identifier ';'
  200               | CONTINUE ';'
  201               | BREAK ';'
  202               | RETURN ';'
  203               | RETURN expression ';'

  204 expression_opt: %empty
  205               | expression

  206 external_declaration: function_definition
  207                     | declaration

  208 function_definition: declaration_specifiers declarator declaration_list_opt compound_statement

  209 declaration_list_opt: %empty
  210                     | declaration_list

  211 declaration_list: declaration
  212                 | declaration_list declaration


Terminals, with rules where they appear

$end (0) 0
'!' (33) 35
'%' (37) 41
'&' (38) 30 57
'(' (40) 10 13 18 19 29 37 136 141 142 192 193 194 195 196 197 198
')' (41) 10 13 18 19 29 37 136 141 142 192 193 194 195 196 197 198
'*' (42) 31 39 140 145 146
'+' (43) 32 43
',' (44) 19 23 84 96 122 125 152 154 160 167
'-' (45) 33 44
'.' (46) 14 174
'/' (47) 40
':' (58) 67 181 182 183
';' (59) 86 165 191 196 197 198 199 200 201 202 203
'<' (60) 49
'=' (61) 72 98 127 170
'>' (62) 50
'?' (63) 67
'[' (91) 12 137 138 139 140 173
']' (93) 12 137 138 139 140 173
'^' (94) 59
'{' (123) 18 19 121 122 163 184
'|' (124) 61
'}' (125) 18 19 121 122 163 184
'~' (126) 34
error (256)
keyword (258)
identifier (259) 5 14 15 123 128 135 158 159 160 174 181 199
punctuator (260)
string_literal (261) 9
int_constant (262) 6
float_constant (263) 7
char_constant (264) 8
MATRIX (265) 116
AUTO (266) 101
ENUM (267) 121 122 123
RESTRICT (268) 130
UNSIGNED (269) 111
BREAK (270) 201
EXTERN (271) 99
RETURN (272) 202 203
VOID (273) 103
CASE (274) 182
FLOAT (275) 108
SHORT (276) 105
VOLATILE (277) 131
CHAR (278) 104
FOR (279) 197 198
SIGNED (280) 110
WHILE (281) 195 196
CONST (282) 129
GOTO (283) 199
SIZEOF (284) 28 29
_BOOL (285) 112
CONTINUE (286) 200
IF (287) 192 193
STATIC (288) 100 138 139
_COMPLEX (289) 113
DEFAULT (290) 183
INLINE (291) 132
STRUCT (292)
_IMAGINARY (293) 114
DO (294) 196
INT (295) 106
SWITCH (296) 194
DOUBLE (297) 109
LONG (298) 107
TYPEDEF (299)
ELSE (300) 193
REGISTER (301) 102
UNION (302)
ELLIPSIS (303) 152
RIGHT_ASSIGN (304) 79
LEFT_ASSIGN (305) 78
ADD_ASSIGN (306) 76
SUB_ASSIGN (307) 77
MUL_ASSIGN (308) 73
DIV_ASSIGN (309) 74
MOD_ASSIGN (310) 75
AND_ASSIGN (311) 80
XOR_ASSIGN (312) 81
OR_ASSIGN (313) 82
RIGHT_OP (314) 47
LEFT_OP (315) 46
INC_OP (316) 16 25
DEC_OP (317) 17 26
PTR_OP (318) 15
AND_OP (319) 63
OR_OP (320) 65
LE_OP (321) 51
GE_OP (322) 52
EQ_OP (323) 54
NE_OP (324) 55
UNARY (325)


Nonterminals, with rules where they appear

$accept (95)
    on left: 0
translation_unit (96)
    on left: 1 2, on right: 0 2
M (97)
    on left: 3, on right: 63 65 67 188 192 193 195 196 197
N (98)
    on left: 4, on right: 67 192 193 195 197
primary_expression (99)
    on left: 5 6 7 8 9 10, on right: 11
postfix_expression (100)
    on left: 11 12 13 14 15 16 17 18 19, on right: 12 13 14 15 16 17
    24
argument_expression_list_opt (101)
    on left: 20 21, on right: 13
argument_expression_list (102)
    on left: 22 23, on right: 21 23
unary_expression (103)
    on left: 24 25 26 27 28 29, on right: 25 26 28 36 71
unary_operator (104)
    on left: 30 31 32 33 34 35, on right: 27
cast_expression (105)
    on left: 36 37, on right: 27 37 38 39 40 41
multiplicative_expression (106)
    on left: 38 39 40 41, on right: 39 40 41 42 43 44
additive_expression (107)
    on left: 42 43 44, on right: 43 44 45 46 47
shift_expression (108)
    on left: 45 46 47, on right: 46 47 48 49 50 51 52
relational_expression (109)
    on left: 48 49 50 51 52, on right: 49 50 51 52 53 54 55
equality_expression (110)
    on left: 53 54 55, on right: 54 55 56 57
AND_expression (111)
    on left: 56 57, on right: 57 58 59
exclusive_OR_expression (112)
    on left: 58 59, on right: 59 60 61
inclusive_OR_expression (113)
    on left: 60 61, on right: 61 62 63
logical_AND_expression (114)
    on left: 62 63, on right: 63 64 65
logical_OR_expression (115)
    on left: 64 65, on right: 65 66 67
conditional_expression (116)
    on left: 66 67, on right: 67 70 85
assignment_expression_opt (117)
    on left: 68 69, on right: 137
assignment_expression (118)
    on left: 70 71, on right: 22 23 69 71 83 84 138 139 162
assignment_operator (119)
    on left: 72 73 74 75 76 77 78 79 80 81 82, on right: 71
expression (120)
    on left: 83 84, on right: 10 12 67 84 192 193 194 195 196 203 205
constant_expression (121)
    on left: 85, on right: 127 173 182
declaration (122)
    on left: 86, on right: 189 198 207 211 212
declaration_specifiers_opt (123)
    on left: 87 88, on right: 89 90 91 92
declaration_specifiers (124)
    on left: 89 90 91 92, on right: 86 88 155 156 208
init_declarator_list_opt (125)
    on left: 93 94, on right: 86
init_declarator_list (126)
    on left: 95 96, on right: 94 96
init_declarator (127)
    on left: 97 98, on right: 95 96
storage_class_specifier (128)
    on left: 99 100 101 102, on right: 89
type_specifier (129)
    on left: 103 104 105 106 107 108 109 110 111 112 113 114 115 116,
    on right: 90 119
specifier_qualifier_list_opt (130)
    on left: 117 118, on right: 119 120
specifier_qualifier_list (131)
    on left: 119 120, on right: 118 161
enum_specifier (132)
    on left: 121 122 123, on right: 115
enumerator_list (133)
    on left: 124 125, on right: 121 122 125
enumerator (134)
    on left: 126 127, on right: 124 125
enumeration_constant (135)
    on left: 128, on right: 126 127
type_qualifier (136)
    on left: 129 130 131, on right: 91 120 149 150
function_specifier (137)
    on left: 132, on right: 92
declarator (138)
    on left: 133 134, on right: 97 98 136 155 208
direct_declarator (139)
    on left: 135 136 137 138 139 140 141 142, on right: 133 134 137
    138 139 140 141 142
parameter_type_list_opt (140)
    on left: 143 144, on right: 141
pointer (141)
    on left: 145 146, on right: 134 146
type_qualifier_list_opt (142)
    on left: 147 148, on right: 137 138 140 145 146
type_qualifier_list (143)
    on left: 149 150, on right: 139 148 150
parameter_type_list (144)
    on left: 151 152, on right: 144
parameter_list (145)
    on left: 153 154, on right: 151 152 154
parameter_declaration (146)
    on left: 155 156, on right: 153 154
identifier_opt (147)
    on left: 157 158, on right: 121 122
identifier_list (148)
    on left: 159 160, on right: 142 160
type_name (149)
    on left: 161, on right: 18 19 29 37
initializer (150)
    on left: 162 163, on right: 98 166 167
initializer_row_list (151)
    on left: 164 165, on right: 163 165
initializer_list (152)
    on left: 166 167, on right: 18 19 164 165 167
designation_opt (153)
    on left: 168 169, on right: 166 167
designation (154)
    on left: 170, on right: 169
designator_list (155)
    on left: 171 172, on right: 170 172
designator (156)
    on left: 173 174, on right: 171 172
statement (157)
    on left: 175 176 177 178 179 180, on right: 181 182 183 190 192
    193 194 195 196 197 198
labeled_statement (158)
    on left: 181 182 183, on right: 175
compound_statement (159)
    on left: 184, on right: 176 208
block_item_list_opt (160)
    on left: 185 186, on right: 184
block_item_list (161)
    on left: 187 188, on right: 186 188
block_item (162)
    on left: 189 190, on right: 187 188
expression_statement (163)
    on left: 191, on right: 177
selection_statement (164)
    on left: 192 193 194, on right: 178
iteration_statement (165)
    on left: 195 196 197 198, on right: 179
jump_statement (166)
    on left: 199 200 201 202 203, on right: 180
expression_opt (167)
    on left: 204 205, on right: 191 197 198
external_declaration (168)
    on left: 206 207, on right: 1 2
function_definition (169)
    on left: 208, on right: 206
declaration_list_opt (170)
    on left: 209 210, on right: 208
declaration_list (171)
    on left: 211 212, on right: 210 212


State 0

    0 $accept: . translation_unit $end

    MATRIX      shift, and go to state 1
    AUTO        shift, and go to state 2
    ENUM        shift, and go to state 3
    RESTRICT    shift, and go to state 4
    UNSIGNED    shift, and go to state 5
    EXTERN      shift, and go to state 6
    VOID        shift, and go to state 7
    FLOAT       shift, and go to state 8
    SHORT       shift, and go to state 9
    VOLATILE    shift, and go to state 10
    CHAR        shift, and go to state 11
    SIGNED      shift, and go to state 12
    CONST       shift, and go to state 13
    _BOOL       shift, and go to state 14
    STATIC      shift, and go to state 15
    _COMPLEX    shift, and go to state 16
    INLINE      shift, and go to state 17
    _IMAGINARY  shift, and go to state 18
    INT         shift, and go to state 19
    DOUBLE      shift, and go to state 20
    LONG        shift, and go to state 21
    REGISTER    shift, and go to state 22

    translation_unit         go to state 23
    declaration              go to state 24
    declaration_specifiers   go to state 25
    storage_class_specifier  go to state 26
    type_specifier           go to state 27
    enum_specifier           go to state 28
    type_qualifier           go to state 29
    function_specifier       go to state 30
    external_declaration     go to state 31
    function_definition      go to state 32


State 1

  116 type_specifier: MATRIX .

    $default  reduce using rule 116 (type_specifier)


State 2

  101 storage_class_specifier: AUTO .

    $default  reduce using rule 101 (storage_class_specifier)


State 3

  121 enum_specifier: ENUM . identifier_opt '{' enumerator_list '}'
  122               | ENUM . identifier_opt '{' enumerator_list ',' '}'
  123               | ENUM . identifier

    identifier  shift, and go to state 33

    $default  reduce using rule 157 (identifier_opt)

    identifier_opt  go to state 34


State 4

  130 type_qualifier: RESTRICT .

    $default  reduce using rule 130 (type_qualifier)


State 5

  111 type_specifier: UNSIGNED .

    $default  reduce using rule 111 (type_specifier)


State 6

   99 storage_class_specifier: EXTERN .

    $default  reduce using rule 99 (storage_class_specifier)


State 7

  103 type_specifier: VOID .

    $default  reduce using rule 103 (type_specifier)


State 8

  108 type_specifier: FLOAT .

    $default  reduce using rule 108 (type_specifier)


State 9

  105 type_specifier: SHORT .

    $default  reduce using rule 105 (type_specifier)


State 10

  131 type_qualifier: VOLATILE .

    $default  reduce using rule 131 (type_qualifier)


State 11

  104 type_specifier: CHAR .

    $default  reduce using rule 104 (type_specifier)


State 12

  110 type_specifier: SIGNED .

    $default  reduce using rule 110 (type_specifier)


State 13

  129 type_qualifier: CONST .

    $default  reduce using rule 129 (type_qualifier)


State 14

  112 type_specifier: _BOOL .

    $default  reduce using rule 112 (type_specifier)


State 15

  100 storage_class_specifier: STATIC .

    $default  reduce using rule 100 (storage_class_specifier)


State 16

  113 type_specifier: _COMPLEX .

    $default  reduce using rule 113 (type_specifier)


State 17

  132 function_specifier: INLINE .

    $default  reduce using rule 132 (function_specifier)


State 18

  114 type_specifier: _IMAGINARY .

    $default  reduce using rule 114 (type_specifier)


State 19

  106 type_specifier: INT .

    $default  reduce using rule 106 (type_specifier)


State 20

  109 type_specifier: DOUBLE .

    $default  reduce using rule 109 (type_specifier)


State 21

  107 type_specifier: LONG .

    $default  reduce using rule 107 (type_specifier)


State 22

  102 storage_class_specifier: REGISTER .

    $default  reduce using rule 102 (storage_class_specifier)


State 23

    0 $accept: translation_unit . $end
    2 translation_unit: translation_unit . external_declaration

    $end        shift, and go to state 35
    MATRIX      shift, and go to state 1
    AUTO        shift, and go to state 2
    ENUM        shift, and go to state 3
    RESTRICT    shift, and go to state 4
    UNSIGNED    shift, and go to state 5
    EXTERN      shift, and go to state 6
    VOID        shift, and go to state 7
    FLOAT       shift, and go to state 8
    SHORT       shift, and go to state 9
    VOLATILE    shift, and go to state 10
    CHAR        shift, and go to state 11
    SIGNED      shift, and go to state 12
    CONST       shift, and go to state 13
    _BOOL       shift, and go to state 14
    STATIC      shift, and go to state 15
    _COMPLEX    shift, and go to state 16
    INLINE      shift, and go to state 17
    _IMAGINARY  shift, and go to state 18
    INT         shift, and go to state 19
    DOUBLE      shift, and go to state 20
    LONG        shift, and go to state 21
    REGISTER    shift, and go to state 22

    declaration              go to state 24
    declaration_specifiers   go to state 25
    storage_class_specifier  go to state 26
    type_specifier           go to state 27
    enum_specifier           go to state 28
    type_qualifier           go to state 29
    function_specifier       go to state 30
    external_declaration     go to state 36
    function_definition      go to state 32


State 24

  207 external_declaration: declaration .

    $default  reduce using rule 207 (external_declaration)


State 25

   86 declaration: declaration_specifiers . init_declarator_list_opt ';'
  208 function_definition: declaration_specifiers . declarator declaration_list_opt compound_statement

    identifier  shift, and go to state 37
    '*'         shift, and go to state 38
    '('         shift, and go to state 39

    $default  reduce using rule 93 (init_declarator_list_opt)

    init_declarator_list_opt  go to state 40
    init_declarator_list      go to state 41
    init_declarator           go to state 42
    declarator                go to state 43
    direct_declarator         go to state 44
    pointer                   go to state 45


State 26

   89 declaration_specifiers: storage_class_specifier . declaration_specifiers_opt

    MATRIX      shift, and go to state 1
    AUTO        shift, and go to state 2
    ENUM        shift, and go to state 3
    RESTRICT    shift, and go to state 4
    UNSIGNED    shift, and go to state 5
    EXTERN      shift, and go to state 6
    VOID        shift, and go to state 7
    FLOAT       shift, and go to state 8
    SHORT       shift, and go to state 9
    VOLATILE    shift, and go to state 10
    CHAR        shift, and go to state 11
    SIGNED      shift, and go to state 12
    CONST       shift, and go to state 13
    _BOOL       shift, and go to state 14
    STATIC      shift, and go to state 15
    _COMPLEX    shift, and go to state 16
    INLINE      shift, and go to state 17
    _IMAGINARY  shift, and go to state 18
    INT         shift, and go to state 19
    DOUBLE      shift, and go to state 20
    LONG        shift, and go to state 21
    REGISTER    shift, and go to state 22

    $default  reduce using rule 87 (declaration_specifiers_opt)

    declaration_specifiers_opt  go to state 46
    declaration_specifiers      go to state 47
    storage_class_specifier     go to state 26
    type_specifier              go to state 27
    enum_specifier              go to state 28
    type_qualifier              go to state 29
    function_specifier          go to state 30


State 27

   90 declaration_specifiers: type_specifier . declaration_specifiers_opt

    MATRIX      shift, and go to state 1
    AUTO        shift, and go to state 2
    ENUM        shift, and go to state 3
    RESTRICT    shift, and go to state 4
    UNSIGNED    shift, and go to state 5
    EXTERN      shift, and go to state 6
    VOID        shift, and go to state 7
    FLOAT       shift, and go to state 8
    SHORT       shift, and go to state 9
    VOLATILE    shift, and go to state 10
    CHAR        shift, and go to state 11
    SIGNED      shift, and go to state 12
    CONST       shift, and go to state 13
    _BOOL       shift, and go to state 14
    STATIC      shift, and go to state 15
    _COMPLEX    shift, and go to state 16
    INLINE      shift, and go to state 17
    _IMAGINARY  shift, and go to state 18
    INT         shift, and go to state 19
    DOUBLE      shift, and go to state 20
    LONG        shift, and go to state 21
    REGISTER    shift, and go to state 22

    $default  reduce using rule 87 (declaration_specifiers_opt)

    declaration_specifiers_opt  go to state 48
    declaration_specifiers      go to state 47
    storage_class_specifier     go to state 26
    type_specifier              go to state 27
    enum_specifier              go to state 28
    type_qualifier              go to state 29
    function_specifier          go to state 30


State 28

  115 type_specifier: enum_specifier .

    $default  reduce using rule 115 (type_specifier)


State 29

   91 declaration_specifiers: type_qualifier . declaration_specifiers_opt

    MATRIX      shift, and go to state 1
    AUTO        shift, and go to state 2
    ENUM        shift, and go to state 3
    RESTRICT    shift, and go to state 4
    UNSIGNED    shift, and go to state 5
    EXTERN      shift, and go to state 6
    VOID        shift, and go to state 7
    FLOAT       shift, and go to state 8
    SHORT       shift, and go to state 9
    VOLATILE    shift, and go to state 10
    CHAR        shift, and go to state 11
    SIGNED      shift, and go to state 12
    CONST       shift, and go to state 13
    _BOOL       shift, and go to state 14
    STATIC      shift, and go to state 15
    _COMPLEX    shift, and go to state 16
    INLINE      shift, and go to state 17
    _IMAGINARY  shift, and go to state 18
    INT         shift, and go to state 19
    DOUBLE      shift, and go to state 20
    LONG        shift, and go to state 21
    REGISTER    shift, and go to state 22

    $default  reduce using rule 87 (declaration_specifiers_opt)

    declaration_specifiers_opt  go to state 49
    declaration_specifiers      go to state 47
    storage_class_specifier     go to state 26
    type_specifier              go to state 27
    enum_specifier              go to state 28
    type_qualifier              go to state 29
    function_specifier          go to state 30


State 30

   92 declaration_specifiers: function_specifier . declaration_specifiers_opt

    MATRIX      shift, and go to state 1
    AUTO        shift, and go to state 2
    ENUM        shift, and go to state 3
    RESTRICT    shift, and go to state 4
    UNSIGNED    shift, and go to state 5
    EXTERN      shift, and go to state 6
    VOID        shift, and go to state 7
    FLOAT       shift, and go to state 8
    SHORT       shift, and go to state 9
    VOLATILE    shift, and go to state 10
    CHAR        shift, and go to state 11
    SIGNED      shift, and go to state 12
    CONST       shift, and go to state 13
    _BOOL       shift, and go to state 14
    STATIC      shift, and go to state 15
    _COMPLEX    shift, and go to state 16
    INLINE      shift, and go to state 17
    _IMAGINARY  shift, and go to state 18
    INT         shift, and go to state 19
    DOUBLE      shift, and go to state 20
    LONG        shift, and go to state 21
    REGISTER    shift, and go to state 22

    $default  reduce using rule 87 (declaration_specifiers_opt)

    declaration_specifiers_opt  go to state 50
    declaration_specifiers      go to state 47
    storage_class_specifier     go to state 26
    type_specifier              go to state 27
    enum_specifier              go to state 28
    type_qualifier              go to state 29
    function_specifier          go to state 30


State 31

    1 translation_unit: external_declaration .

    $default  reduce using rule 1 (translation_unit)


State 32

  206 external_declaration: function_definition .

    $default  reduce using rule 206 (external_declaration)


State 33

  123 enum_specifier: ENUM identifier .
  158 identifier_opt: identifier .

    '{'       reduce using rule 158 (identifier_opt)
    $default  reduce using rule 123 (enum_specifier)


State 34

  121 enum_specifier: ENUM identifier_opt . '{' enumerator_list '}'
  122               | ENUM identifier_opt . '{' enumerator_list ',' '}'

    '{'  shift, and go to state 51


State 35

    0 $accept: translation_unit $end .

    $default  accept


State 36

    2 translation_unit: translation_unit external_declaration .

    $default  reduce using rule 2 (translation_unit)


State 37

  135 direct_declarator: identifier .

    $default  reduce using rule 135 (direct_declarator)


State 38

  145 pointer: '*' . type_qualifier_list_opt
  146        | '*' . type_qualifier_list_opt pointer

    RESTRICT  shift, and go to state 4
    VOLATILE  shift, and go to state 10
    CONST     shift, and go to state 13

    $default  reduce using rule 147 (type_qualifier_list_opt)

    type_qualifier           go to state 52
    type_qualifier_list_opt  go to state 53
    type_qualifier_list      go to state 54


State 39

  136 direct_declarator: '(' . declarator ')'

    identifier  shift, and go to state 37
    '*'         shift, and go to state 38
    '('         shift, and go to state 39

    declarator         go to state 55
    direct_declarator  go to state 44
    pointer            go to state 45


State 40

   86 declaration: declaration_specifiers init_declarator_list_opt . ';'

    ';'  shift, and go to state 56


State 41

   94 init_declarator_list_opt: init_declarator_list .
   96 init_declarator_list: init_declarator_list . ',' init_declarator

    ','  shift, and go to state 57

    $default  reduce using rule 94 (init_declarator_list_opt)


State 42

   95 init_declarator_list: init_declarator .

    $default  reduce using rule 95 (init_declarator_list)


State 43

   97 init_declarator: declarator .
   98                | declarator . '=' initializer
  208 function_definition: declaration_specifiers declarator . declaration_list_opt compound_statement

    MATRIX      shift, and go to state 1
    AUTO        shift, and go to state 2
    ENUM        shift, and go to state 3
    RESTRICT    shift, and go to state 4
    UNSIGNED    shift, and go to state 5
    EXTERN      shift, and go to state 6
    VOID        shift, and go to state 7
    FLOAT       shift, and go to state 8
    SHORT       shift, and go to state 9
    VOLATILE    shift, and go to state 10
    CHAR        shift, and go to state 11
    SIGNED      shift, and go to state 12
    CONST       shift, and go to state 13
    _BOOL       shift, and go to state 14
    STATIC      shift, and go to state 15
    _COMPLEX    shift, and go to state 16
    INLINE      shift, and go to state 17
    _IMAGINARY  shift, and go to state 18
    INT         shift, and go to state 19
    DOUBLE      shift, and go to state 20
    LONG        shift, and go to state 21
    REGISTER    shift, and go to state 22
    '='         shift, and go to state 58

    '{'       reduce using rule 209 (declaration_list_opt)
    $default  reduce using rule 97 (init_declarator)

    declaration              go to state 59
    declaration_specifiers   go to state 60
    storage_class_specifier  go to state 26
    type_specifier           go to state 27
    enum_specifier           go to state 28
    type_qualifier           go to state 29
    function_specifier       go to state 30
    declaration_list_opt     go to state 61
    declaration_list         go to state 62


State 44

  133 declarator: direct_declarator .
  137 direct_declarator: direct_declarator . '[' type_qualifier_list_opt assignment_expression_opt ']'
  138                  | direct_declarator . '[' STATIC type_qualifier_list_opt assignment_expression ']'
  139                  | direct_declarator . '[' type_qualifier_list STATIC assignment_expression ']'
  140                  | direct_declarator . '[' type_qualifier_list_opt '*' ']'
  141                  | direct_declarator . '(' parameter_type_list_opt ')'
  142                  | direct_declarator . '(' identifier_list ')'

    '('  shift, and go to state 63
    '['  shift, and go to state 64

    $default  reduce using rule 133 (declarator)


State 45

  134 declarator: pointer . direct_declarator

    identifier  shift, and go to state 37
    '('         shift, and go to state 39

    direct_declarator  go to state 65


State 46

   89 declaration_specifiers: storage_class_specifier declaration_specifiers_opt .

    $default  reduce using rule 89 (declaration_specifiers)


State 47

   88 declaration_specifiers_opt: declaration_specifiers .

    $default  reduce using rule 88 (declaration_specifiers_opt)


State 48

   90 declaration_specifiers: type_specifier declaration_specifiers_opt .

    $default  reduce using rule 90 (declaration_specifiers)


State 49

   91 declaration_specifiers: type_qualifier declaration_specifiers_opt .

    $default  reduce using rule 91 (declaration_specifiers)


State 50

   92 declaration_specifiers: function_specifier declaration_specifiers_opt .

    $default  reduce using rule 92 (declaration_specifiers)


State 51

  121 enum_specifier: ENUM identifier_opt '{' . enumerator_list '}'
  122               | ENUM identifier_opt '{' . enumerator_list ',' '}'

    identifier  shift, and go to state 66

    enumerator_list       go to state 67
    enumerator            go to state 68
    enumeration_constant  go to state 69


State 52

  149 type_qualifier_list: type_qualifier .

    $default  reduce using rule 149 (type_qualifier_list)


State 53

  145 pointer: '*' type_qualifier_list_opt .
  146        | '*' type_qualifier_list_opt . pointer

    '*'  shift, and go to state 38

    $default  reduce using rule 145 (pointer)

    pointer  go to state 70


State 54

  148 type_qualifier_list_opt: type_qualifier_list .
  150 type_qualifier_list: type_qualifier_list . type_qualifier

    RESTRICT  shift, and go to state 4
    VOLATILE  shift, and go to state 10
    CONST     shift, and go to state 13

    $default  reduce using rule 148 (type_qualifier_list_opt)

    type_qualifier  go to state 71


State 55

  136 direct_declarator: '(' declarator . ')'

    ')'  shift, and go to state 72


State 56

   86 declaration: declaration_specifiers init_declarator_list_opt ';' .

    $default  reduce using rule 86 (declaration)


State 57

   96 init_declarator_list: init_declarator_list ',' . init_declarator

    identifier  shift, and go to state 37
    '*'         shift, and go to state 38
    '('         shift, and go to state 39

    init_declarator    go to state 73
    declarator         go to state 74
    direct_declarator  go to state 44
    pointer            go to state 45


State 58

   98 init_declarator: declarator '=' . initializer

    identifier      shift, and go to state 75
    string_literal  shift, and go to state 76
    int_constant    shift, and go to state 77
    float_constant  shift, and go to state 78
    char_constant   shift, and go to state 79
    SIZEOF          shift, and go to state 80
    INC_OP          shift, and go to state 81
    DEC_OP          shift, and go to state 82
    '+'             shift, and go to state 83
    '-'             shift, and go to state 84
    '*'             shift, and go to state 85
    '('             shift, and go to state 86
    '{'             shift, and go to state 87
    '&'             shift, and go to state 88
    '~'             shift, and go to state 89
    '!'             shift, and go to state 90
